--- a/templates/contact.html
+++ b/templates/contact.html
@@ -27,7 +27,7 @@
         <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
         <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
         <!-- To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
-        <form id="contactForm" data-sb-form-api-token="API_TOKEN" action="https://formsubmit.co/FgDGvDfd" method="post">
+        <form id="contactForm" data-sb-form-api-token="API_TOKEN" action="https://formsubmit.co/iayushnegi09@gmail.com" method="post">
           <input type="hidden" name="_template" value="box">
           <input type="hidden" name="_next" value="https://ayush-blog.herokuapp.com/thankyou.html">
 
