added thanks page template

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -29,7 +29,7 @@
         <!-- To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
         <form id="contactForm" data-sb-form-api-token="API_TOKEN" action="https://formsubmit.co/iayushnegi09@gmail.com" method="post">
           <input type="hidden" name="_template" value="box">
-          <input type="hidden" name="_next" value="{{url_for('thanks')}}">
+          <input type="hidden" name="_next" value="https://ayush-blog.herokuapp.com/templates/thankyou.html">
 
 
           <div class="control-group">
