--- a/templates/make-post.html
+++ b/templates/make-post.html
@@ -25,6 +25,13 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
+         {% with messages = get_flashed_messages() %}
+  {% if messages %}
+    {% for message in messages: %}
+      <p class="flashing">{{ message }}</p>
+    {% endfor %}
+  {% endif %}
+{% endwith %}
         {{ ckeditor.load() }}
         {{ ckeditor.config(name='body') }}
         {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
