--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 {% include "header.html" %}
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url({{ url_for('static', filename='img/mtufyy.jpg')}})">
+  <header class="masthead" style="background-image: url('https://www.istockphoto.com/photo/i-love-working-from-home-gm1182641010-332167113?utm_source=unsplash&utm_medium=affiliate&utm_campaign=srp_photos_top&utm_content=https%3A%2F%2Funsplash.com%2Fs%2Fphotos%2Fblog&utm_term=blog%3A%3A%3A')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
