--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,7 @@
 {% extends 'bootstrap/base.html' %}
+{% import "bootstrap/wtf.html" as wtf %}
+
+{% block content %}
 {% include "header.html" %}
 
   <!-- Page Header -->
@@ -72,3 +75,4 @@
   <hr>
 
   {% include "footer.html" %}
+{% endblock %}
